Fix breadcrumbs icon alignnments

--- a/src/css/view/breadcrumbs.scss
+++ b/src/css/view/breadcrumbs.scss
@@ -2,6 +2,7 @@
    display: flex;
    &__prefix {
       display: flex;
+      align-items: center;
    }
    &__content {
       display: flex;
